add name inputs, add die to html, add buttons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <h4><span id="playerOneScore"></span></h4>
     </div>
     <div class="col-4">
+      <p id="die" align="center">0</p>
       <span id="dieRoll"></span>
       <button type="button" class="btn-danger" id="playButton">PLAY</button>
       <button type="button" class="btn-warning" id="holdButton">HOLD</button>
