--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
   </form>
 
   <div class="row">
-    <div class="col-4">
+    <div class="col-md-4">
       <h2>Player One</h2>
       <h3><span id="playerOneInput"></span></h3>
       <h4>Current Score: <span id="playerOneScore"></span></h4>
 
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <p id="die" align="center"></p>
       <!-- <span id="dieRoll"></span> -->
       <button type="button" class="btn-danger" id="playButton">PLAY</button>
       <button type="button" class="btn-warning" id="holdButton">HOLD</button>
 
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <h2>Player Two</h2>
       <h3><span id="playerTwoInput"></span></h3>
-      <h4><span id="playerTwoScore"></span></h4>
+      <h4>Current Score: <span id="playerTwoScore"></span></h4>
 
     </div>
 
