--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <button type="submit" class="btn-primary">Submit</button>
   </form>
 
-  <div class="row">
+  <div class="row" align="center">
     <div class="col-md-4">
       <h2>Player One</h2>
       <h3><span id="playerOneInput"></span></h3>
-      <h4>Current Score: <span id="playerOneScore"></span></h4>
+      <h4>Current Score</h4>
+      <span id="playerOneScore"></span>
 
     </div>
     <div class="col-md-4">
-      <p id="die" align="center"></p>
-      <!-- <span id="dieRoll"></span> -->
+      <p id="die"></p>
       <button type="button" class="btn-danger" id="playButton">PLAY</button>
       <button type="button" class="btn-warning" id="holdButton">HOLD</button>
 
@@ -42,7 +42,8 @@
     <div class="col-md-4">
       <h2>Player Two</h2>
       <h3><span id="playerTwoInput"></span></h3>
-      <h4>Current Score: <span id="playerTwoScore"></span></h4>
+      <h4>Current Score</h4>
+      <span id="playerTwoScore"></span>
 
     </div>
 
